# GITHUB_AI_PROJECTS_PACKAGE

./: .dockerignore  .gitignore  .releaserc.json  CHANGELOG.md  DEPENDENCIES_REPORT.md  Dockerfile  PIPELINE_STATUS.md  README.md  Taskfile.yml  mkdocs.yml
01-core-operating-systems/: README.md  moie-os-orchestrator.py  moie-os-orchestrator_README.md  moie_os_config.py  moie_os_config_README.md
01-core-operating-systems/moie-os-core/: QUICKSTART.md  README.md  __init__.py  pyproject.toml  requirements.txt  run_moie.sh  setup.py  simple_test.py  test_moie.py
01-core-operating-systems/moie-os-core/core/: __init__.py  constants.py  models.py
01-core-operating-systems/moie-os-core/experts/: __init__.py  base_expert.py  expert_pool.py  router.py  specialized_experts.py
01-core-operating-systems/moie-os-core/governance/: __init__.py  lord_wilson.py
01-core-operating-systems/moie-os-core/interfaces/: __init__.py  cli.py
01-core-operating-systems/moie-os-core/kill_chain/: __init__.py  alchemist.py  hunter.py  judge.py  pipeline.py  targeting.py
01-core-operating-systems/moie-os-core/metrics/: __init__.py  vdr.py
01-core-operating-systems/moie-os-core/oracle/: __init__.py  neural.py  oracle.py  symbolic.py
01-core-operating-systems/moie-os-core/ouroboros/: __init__.py  engine.py  health_tracker.py  purgatory.py
02-autonomous-intelligence/: README.md
03-orchestration-coordination/: README.md
04-memory-knowledge/: README.md
05-graph-network/: README.md  entangled_network.py  entangled_network_README.md  infinite_graph.py  infinite_graph_README.md  universal_cognitive_graph.py  universal_cognitive_graph_README.md  universal_network.py  universal_network_README.md
06-decision-reasoning/: README.md
07-optimization/: README.md
08-learning-adaptation/: README.md  collective_learner.py  collective_learner_README.md  feedback_loop.py  feedback_loop_README.md  few_shot_adapter.py  few_shot_adapter_README.md  meta_learner.py  (+5 more)
11-sovereignty-security/sovereign-stacks/sovereign-gateway/: ADVANCED_FEATURES.md  ARCHITECTURE.md  Cargo.toml  DEPLOYMENT_COMPLETE.md  FINAL_ENHANCEMENT_SUMMARY.md  QUANTUM_ARCHITECTURE.md  README.md  build_output.txt  deploy_log_20251213_200908.txt  deploy_log_20251213_203531.txt  deploy_sovereign.sh  docker-compose.yml  measure_vdr.py
11-sovereignty-security/sovereign-stacks/sovereign-gateway/examples/: advanced_demo.rs  benchmark.rs  client.rs
11-sovereignty-security/sovereign-stacks/sovereign-gateway/scripts/: batch_processor.sh  warm_pool.sh
11-sovereignty-security/sovereign-stacks/sovereign-gateway/src/: auth.rs  cache.rs  main.rs  main_minimal.rs  observability.rs  rate_limiter.rs
11-sovereignty-security/sovereign-stacks/sovereign-gateway/src/backup_modules/: adaptive.rs  autonomous_refactor.rs  chaos.rs  compile_time_verification.rs  distributed_consensus.rs  entropy_minimizer.rs  fractal.rs  healing.rs  holographic_debug.rs  lib.rs  neural_predictor.rs  predictive.rs  quantum_sync.rs  reality_synthesis.rs  temporal.rs  time_travel.rs  zero_knowledge.rs
11-sovereignty-security/sovereign-stacks/sovereign-gateway/tests/: integration_test.rs
12-vy-platform/vy-nexus/aegis-rust/: BENCHMARK_ANALYSIS_FRAMEWORK.md  BENCHMARK_FIX_GUIDE.md  BENCHMARK_RESULTS_BASELINE.md  BENCHMARK_SPECIFICATIONS.md  BUILD_TROUBLESHOOTING_GUIDE.md  BUILD_VERIFICATION_CHECKLIST.md  Cargo.toml  DAY_7_READINESS_SUMMARY.md  DAY_8_9_10_PREP_COMPLETE.md  DOCUMENTATION_TEMPLATES.md  END_TO_END_WORKFLOWS.md  INTEGRATION_TESTS_COMPLETE.md  INTEGRATION_TEST_SPECS.md  NEXT_BACKGROUND_TASKS.md  OPTIMIZATION_RECOMMENDATIONS.md  PERFORMANCE_BASELINE_REPORT.md  PERFORMANCE_SUMMARY_DAY8.md  PERFORMANCE_TARGETS.md  PERFORMANCE_TESTING_PLAN.md  README.md  SCALABILITY_TEST_SPECIFICATIONS.md  SPRINT_2_INTEGRATION_STRATEGY.md  SPRINT_2_INTEGRATION_TESTS.md  SPRINT_2_ROADMAP.md  STRESS_TEST_IMPLEMENTATION_GUIDE.md  STRESS_TEST_SPECIFICATIONS.md  benchmark_results.txt  benchmark_summary.txt  experts_config.json  fix_integration_tests.py  fix_tests.py  integration_test_output.txt  love_engine_test.txt  run_build_verification.sh  test_output.txt  test_results.txt  test_results_all.txt  test_results_final.txt
12-vy-platform/vy-nexus/aegis-rust/audit-system/: Cargo.toml  README.md
12-vy-platform/vy-nexus/aegis-rust/audit-system/benches/: audit_system_bench.rs
12-vy-platform/vy-nexus/aegis-rust/audit-system/src/: lib.rs  logger.rs
12-vy-platform/vy-nexus/aegis-rust/benchmark-templates/: README.md
12-vy-platform/vy-nexus/aegis-rust/evolution-core/: Cargo.toml  README.md
12-vy-platform/vy-nexus/aegis-rust/evolution-core/benches/: evolution_core_bench.rs
12-vy-platform/vy-nexus/aegis-rust/evolution-core/src/: engine.rs  lib.rs  tests.rs
12-vy-platform/vy-nexus/aegis-rust/hitl-collab/: Cargo.toml  README.md
12-vy-platform/vy-nexus/aegis-rust/hitl-collab/benches/: hitl_collab_bench.rs
12-vy-platform/vy-nexus/aegis-rust/hitl-collab/src/: collaborator.rs  lib.rs
12-vy-platform/vy-nexus/aegis-rust/intent-firewall/: Cargo.toml  README.md
12-vy-platform/vy-nexus/aegis-rust/intent-firewall/benches/: intent_firewall_bench.rs
12-vy-platform/vy-nexus/aegis-rust/intent-firewall/src/: lib.rs
12-vy-platform/vy-nexus/aegis-rust/love-engine/: Cargo.toml  README.md
12-vy-platform/vy-nexus/aegis-rust/love-engine/benches/: love_engine_bench.rs
12-vy-platform/vy-nexus/aegis-rust/love-engine/src/: lib.rs
12-vy-platform/vy-nexus/aegis-rust/src/: lib.rs  main.rs
12-vy-platform/vy-nexus/aegis-rust/stress-tests/: Cargo.toml
12-vy-platform/vy-nexus/aegis-rust/stress-tests/src/: concurrent.rs  high_throughput.rs  main.rs  memory.rs  metrics.rs
12-vy-platform/vy-nexus/aegis-rust/tests/: integration_tests.rs
12-vy-platform/vy-nexus/nexus-core/: Cargo.toml
12-vy-platform/vy-nexus/nexus-core/examples/: test_automation.rs  test_firewall.rs
12-vy-platform/vy-nexus/nexus-core/src/: lib.rs
12-vy-platform/vy-nexus/nexus-core/src/contracts/: mod.rs  open_app.rs
12-vy-platform/vy-nexus/nexus-core/src/firewall/: mod.rs
12-vy-platform/vy-nexus/nexus-core/src/ledger/: mod.rs
(+9187 files in other folders)
