[project]
name = "moie-os-core"
version = "0.1.0"
description = "MoIE-OS Protocol - Intelligent agent orchestration with VDR metrics and self-pruning"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "numpy>=1.24.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
