[package]
name = "sovereign-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["trace"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
rand = "0.8"

# Production Observability Dependencies
prometheus = "0.13"
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
