[workspace]
resolver = "2"
members = [
    "intent-firewall",
    "love-engine",
    "evolution-core",
    "audit-system",
    "hitl-collab",
    "stress-tests",
]

[package]
name = "aegis-rust"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
intent-firewall = { path = "intent-firewall" }
love-engine = { path = "love-engine" }
evolution-core = { path = "evolution-core" }
audit-system = { path = "audit-system", features = ["hitl-integration"] }
hitl-collab = { path = "hitl-collab" }
tokio = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"
chrono = "0.4"

[dev-dependencies]
criterion = { workspace = true }

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Wilson <lordwilson@vercept.com>"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# AI/ML
rig-core = "0.1"

# Scripting
rhai = { version = "1.16", features = ["sync"] }

# WASM
wasmtime = "16.0"

# Database
rusqlite = { version = "0.30", features = ["bundled"] }

# Cryptography
ed25519-dalek = "2.1"
sha2 = "0.10"
rand = "0.8"

# Testing
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
