[package]
name = "nexus-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
chrono = "0.4"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }
async-trait = "0.1"
regex = "1.10"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[[example]]
name = "test_automation"
path = "examples/test_automation.rs"
