[package]
name = "hitl-collab"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono = "0.4"

[dev-dependencies]
criterion.workspace = true
tokio = { workspace = true, features = ["test-util"] }

[[bench]]
name = "hitl_collab_bench"
harness = false
