[package]
name = "intent-firewall"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
rig-core.workspace = true

[dev-dependencies]
criterion.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[[bench]]
name = "intent_firewall_bench"
harness = false
