[package]
name = "love-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
rig-core.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "love_engine_bench"
harness = false
